Fix campaign spacing

--- a/drupal/profiles/takepart/themes/takepart3/css/old_style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/old_style.css
@@ -2976,7 +2976,7 @@ body.page-node .article-campaign-blocks .article-campaign-blocks-block, body.nod
 }
 
 #highlighted .region-highlighted {
-    padding: 10px;
+    padding: 10px 10px 0 10px;
 }
 
 body.front #highlighted {
@@ -3005,7 +3005,7 @@ body.node-type-takepart-campaign {
 } 
 
 body.node-type-takepart-campaign #highlighted {
-    padding-bottom: 0;
+    padding: 10px 0 0 0;
 }
 
 #block-context-related-menu-the-cove-campaign {
